--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa" dir="rtl">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,5 +7,27 @@
     <link rel="stylesheet" href="dist/output.css" />
     <title>css tailwind project</title>
   </head>
-  <body></body>
+  <body>
+    <header class="shadow-md">
+      <div class="container mx-auto py-2 px-4">
+        <nav class="flex justify-between">
+          <div class="flex gap-3">
+            <div class="mr-3">
+              <button>عضویت</button>
+              <button>ورود</button>
+            </div>
+            <ul class="flex gap-5">
+              <li>صحفه اصلی</li>
+              <li>محصولات</li>
+              <li>درباره ما</li>
+              <li>تماس باما</li>
+            </ul>
+          </div>
+          <div>
+            <h1>Alireza</h1>
+          </div>
+        </nav>
+      </div>
+    </header>
+  </body>
 </html>
