--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="dist/output.css" />
     <title>css tailwind project</title>
   </head>
-  <body>
+  <body class="font-vazir text-gray-800">
     <header class="shadow-md">
       <div class="container mx-auto py-2 px-4">
         <nav class="flex justify-between">
@@ -24,7 +24,7 @@
             </ul>
           </div>
           <div>
-            <h1>Alireza</h1>
+            <h1 class="font-sans">Alireza</h1>
           </div>
         </nav>
       </div>
