Build button component

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <body class="font-vazir text-gray-800">
     <header class="shadow-md">
       <div class="container mx-auto py-2 px-4">
-        <nav class="flex justify-between">
-          <div class="flex gap-3">
+        <nav class="flex justify-between items-center">
+          <div class="flex items-center gap-3">
             <div class="mr-3">
-              <button>عضویت</button>
-              <button>ورود</button>
+              <button class="btn btn-primary">عضویت</button>
+              <button class="btn btn-secoundary">ورود</button>
             </div>
             <ul class="flex gap-5">
               <li>صحفه اصلی</li>
