--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./tailwind-css.svg" type="image/x-svg" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="dist/output.css" />
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
+    ></script>
     <title>css tailwind project</title>
   </head>
   <body class="font-vazir text-gray-800">
@@ -17,14 +28,52 @@
               <button class="btn btn-secoundary">ورود</button>
             </div>
             <ul class="flex gap-5">
-              <li>صحفه اصلی</li>
-              <li>محصولات</li>
-              <li>درباره ما</li>
-              <li>تماس باما</li>
+              <li>
+                <a href="#" class="nav-item nav-item-selected">صحفه اصلی</a>
+              </li>
+              <div x-data="{ open: false }">
+                <li>
+                  <a
+                    href="#"
+                    class="nav-item"
+                    @click="open = ! open"
+                    :class="{'nav-item-selected':open}"
+                  >
+                    محصولات
+                    <i class="fas fa-chevron-down text-[0.7rem]"></i>
+                  </a>
+                </li>
+                <div
+                  x-show="open"
+                  @click.outside="open = false"
+                  x-cloak
+                  class="absolute top-[3rem] right-[22rem] bg-white border rounded-lg px-6 py-4"
+                >
+                  <ul class="space-y-2">
+                    <li>
+                      <a href="#" class="hover:text-teal-600"
+                        >محصولات شماره یک</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#" class="hover:text-teal-600"
+                        >محصولات شماره دو</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#" class="hover:text-teal-600"
+                        >محصولات شماره سه</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <li><a href="#" class="nav-item">درباره ما</a></li>
+              <li><a href="#" class="nav-item">تماس باما</a></li>
             </ul>
           </div>
           <div>
-            <h1 class="font-sans">Alireza</h1>
+            <h1 class="font-sans text-3xl"><a href="#">Alireza</a></h1>
           </div>
         </nav>
       </div>
