--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           <h2 class="text-2xl mb-5 dark:text-white">
             لورم ایپسوم <span class="text-teal-600">متن ساختگی</span>
           </h2>
-          <p class="mb-5 dark:text-white">
+          <p class="mb-5 text-justify dark:text-white">
             لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با
             استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در
             ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز،
@@ -164,6 +164,117 @@
         />
       </div>
     </section>
+
+    <div style="height: 100px; overflow: hidden">
+      <svg
+        viewBox="0 0 500 150"
+        preserveAspectRatio="none"
+        style="height: 100%; width: 100%"
+      >
+        <path
+          class="fill-gray-100 dark:fill-gray-800"
+          d="M-41.48,78.47 C202.88,239.31 349.20,-49.98 578.72,164.31 L500.00,150.00 L0.00,150.00 Z"
+          style="stroke: none"
+        ></path>
+      </svg>
+    </div>
+    <section class="bg-gray-100 dark:bg-gray-800 dark:text-white">
+      <div class="container mx-auto py-2 px-4">
+        <div class="text-center">
+          <h2 class="text-xl mb-5 dark:text-white">
+            لورم ایپسوم <span class="text-teal-600">متن ساختگی</span>
+          </h2>
+          <p class="mb-5 text-[14px] text-gray-500 dark:text-gray-400">
+            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با
+            استفاده از طراحان گرافیک است.
+          </p>
+        </div>
+        <div
+          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 mt-3 mb-3 gap-x-6 gap-y-10 lg:w-3/4 mx-auto"
+        >
+          <div class="flex items-center">
+            <div>
+              <i
+                class="fas fa-shield-alt text-2xl text-teal-600 p-4 border border-1 leading-[1] border-teal-600 rounded-full"
+              ></i>
+            </div>
+            <p class="mr-5">
+              لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با
+              استفاده از طراحان گرافیک است.
+            </p>
+          </div>
+          <div class="flex items-center">
+            <div>
+              <i
+                class="fas fa-headset text-2xl text-teal-600 p-4 border border-1 leading-[1] border-teal-600 rounded-full"
+              ></i>
+            </div>
+            <p class="mr-5">
+              لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با
+              استفاده از طراحان گرافیک است.
+            </p>
+          </div>
+          <div class="flex items-center">
+            <div>
+              <i
+                class="fas fa-sliders-h text-2xl text-teal-600 p-4 border border-1 leading-[1] border-teal-600 rounded-full"
+              ></i>
+            </div>
+            <p class="mr-5">
+              لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با
+              استفاده از طراحان گرافیک است.
+            </p>
+          </div>
+          <div class="flex items-center">
+            <div>
+              <i
+                class="fas fa-comment text-2xl text-teal-600 p-4 border border-1 leading-[1] border-teal-600 rounded-full"
+              ></i>
+            </div>
+            <p class="mr-5">
+              لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با
+              استفاده از طراحان گرافیک است.
+            </p>
+          </div>
+          <div class="flex items-center">
+            <div>
+              <i
+                class="fas fa-chart-line text-2xl text-teal-600 p-4 border border-1 leading-[1] border-teal-600 rounded-full"
+              ></i>
+            </div>
+            <p class="mr-5">
+              لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با
+              استفاده از طراحان گرافیک است.
+            </p>
+          </div>
+          <div class="flex items-center">
+            <div>
+              <i
+                class="fas fa-box text-2xl text-teal-600 p-4 border border-1 leading-[1] border-teal-600 rounded-full"
+              ></i>
+            </div>
+            <p class="mr-5">
+              لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با
+              استفاده از طراحان گرافیک است.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <div style="height: 100px; overflow: hidden">
+      <svg
+        viewBox="0 0 500 150"
+        preserveAspectRatio="none"
+        style="height: 100%; width: 100%"
+      >
+        <path
+          class="fill-gray-100 dark:fill-gray-800"
+          d="M0.00,49.98 C149.99,150.00 271.49,-49.98 500.00,49.98 L500.00,0.00 L0.00,0.00 Z"
+          style="stroke: none"
+        ></path>
+      </svg>
+    </div>
+
     <script src="js/index.js"></script>
   </body>
 </html>
