build galery section

--- a/index.html
+++ b/index.html
@@ -274,6 +274,171 @@
         ></path>
       </svg>
     </div>
+    <section>
+      <div class="container mx-auto py-2 px-4">
+        <div class="text-center">
+          <h2 class="text-xl mb-5 dark:text-white">
+            لورم ایپسوم <span class="text-teal-600">متن ساختگی</span>
+          </h2>
+          <p class="mb-5 text-[14px] text-gray-500 dark:text-gray-400">
+            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با
+            استفاده از طراحان گرافیک است.
+          </p>
+        </div>
+        <div
+          class="flex flex-col items-center gap-8 lg:flex-row lg:justify-between"
+        >
+          <div
+            class="border-2 border-t-8 border-t-teal-600 rounded-lg py-5 px-20 text-center overflow-hidden dark:text-white"
+          >
+            <div class="space-y-6 py-4">
+              <h3 class="text-2xl font-bold">استارتاپ</h3>
+              <p><span class="text-xl font-bold">500,000</span> تومان</p>
+              <p class="font-bold text-gray-700 dark:text-gray-300">ماهانه</p>
+              <hr />
+            </div>
+            <div class="space-y-4">
+              <p>لورم ایپسوم</p>
+              <p>لورم ایپسوم متن</p>
+              <p>لورم ایپسوم</p>
+              <p>لورم ایپسوم متن</p>
+              <p>لورم ایپسوم</p>
+            </div>
+            <div class="py-8">
+              <button class="btn btn-primary">خرید پکیج</button>
+            </div>
+          </div>
+          <div
+            class="text-white bg-teal-600 border-2 border-t-8 border-t-teal-600 rounded-lg py-5 px-20 text-center overflow-hidden"
+          >
+            <div class="space-y-6 py-4">
+              <h3 class="text-2xl font-bold">اقتصادی</h3>
+              <p><span class="text-xl font-bold">1500,000</span> تومان</p>
+              <p class="font-bold text-teal-200">ماهانه</p>
+              <hr />
+            </div>
+            <div class="space-y-4">
+              <p>لورم ایپسوم</p>
+              <p>لورم ایپسوم متن</p>
+              <p>لورم ایپسوم</p>
+              <p>لورم ایپسوم متن</p>
+              <p>لورم ایپسوم</p>
+            </div>
+            <div class="py-8">
+              <button class="btn btn-secoundary">خرید پکیج</button>
+            </div>
+          </div>
+          <div
+            class="border-2 border-t-8 border-t-teal-600 rounded-lg py-5 px-20 text-center overflow-hidden dark:text-white"
+          >
+            <div class="space-y-6 py-4">
+              <h3 class="text-2xl font-bold">تجاری</h3>
+              <p><span class="text-xl font-bold">2500,000</span> تومان</p>
+              <p class="font-bold text-gray-700 dark:text-gray-300">ماهانه</p>
+              <hr />
+            </div>
+            <div class="space-y-4">
+              <p>لورم ایپسوم</p>
+              <p>لورم ایپسوم متن</p>
+              <p>لورم ایپسوم</p>
+              <p>لورم ایپسوم متن</p>
+              <p>لورم ایپسوم</p>
+            </div>
+            <div class="py-8">
+              <button class="btn btn-primary">خرید پکیج</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="mt-24">
+      <div class="container mx-auto py-2 px-4">
+        <div class="text-center">
+          <h2 class="text-xl mb-5 dark:text-white">
+            لورم ایپسوم <span class="text-teal-600">متن ساختگی</span>
+          </h2>
+          <p class="mb-5 text-[14px] text-gray-500 dark:text-gray-400">
+            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با
+            استفاده از طراحان گرافیک است.
+          </p>
+        </div>
+        <div>
+          <h3
+            class="text-2xl text-center text-teal-400 dark:text-teal-200 mb-10"
+          >
+            گالری
+          </h3>
+          <div
+            class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-x-4 gap-y-4"
+          >
+            <div class="overflow-hidden rounded-md">
+              <img
+                class="w-full h-full object-cover"
+                src="./image/ales-nesetril-Im7lZjxeLhg-unsplash.jpg"
+                alt="img-01"
+              />
+            </div>
+            <div class="overflow-hidden rounded-md">
+              <img
+                class="w-full h-full object-cover"
+                src="./image/alex-knight-2EJCSULRwC8-unsplash.jpg"
+                alt="img-02"
+              />
+            </div>
+            <div class="overflow-hidden rounded-md">
+              <img
+                class="w-full h-full object-cover"
+                src="./image/alexandre-debieve-FO7JIlwjOtU-unsplash.jpg"
+                alt="img-03"
+              />
+            </div>
+            <div class="overflow-hidden rounded-md">
+              <img
+                class="w-full h-full object-cover"
+                src="./image/andy-hermawan-uFdCDgnoNVI-unsplash.jpg"
+                alt="img-04"
+              />
+            </div>
+            <div class="overflow-hidden rounded-md">
+              <img
+                class="w-full h-full object-cover"
+                src="./image/brooke-lark-W1B2LpQOBxA-unsplash.jpg"
+                alt="img-05"
+              />
+            </div>
+            <div class="overflow-hidden rounded-md">
+              <img
+                class="w-full h-full object-cover"
+                src="./image/freestocks-_3Q3tsJ01nc-unsplash.jpg"
+                alt="img-06"
+              />
+            </div>
+            <div class="overflow-hidden rounded-md">
+              <img
+                class="w-full h-full object-cover"
+                src="./image/igor-karimov-9AmKnNZw3GA-unsplash.jpg"
+                alt="img-07"
+              />
+            </div>
+            <div class="overflow-hidden rounded-md">
+              <img
+                class="w-full h-full object-cover"
+                src="./image/surface--ZFvSWK4L28-unsplash.jpg"
+                alt="img-08"
+              />
+            </div>
+            <div class="overflow-hidden rounded-md">
+              <img
+                class="w-full h-full object-cover"
+                src="./image/lycs-architecture-U2BI3GMnSSE-unsplash.jpg"
+                alt="img-09"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <script src="js/index.js"></script>
   </body>
