Build contact section

--- a/index.html
+++ b/index.html
@@ -440,6 +440,48 @@
       </div>
     </section>
 
+    <section class="mt-24">
+      <div
+        class="container mx-auto lg:w-3/4 py-2 px-4 md:flex md:items-center md:gap-10"
+      >
+        <div>
+          <h2 class="text-2xl mb-5 dark:text-white">
+            لورم ایپسوم <span class="text-teal-600">متن ساختگی</span>
+          </h2>
+          <p class="mb-5 text-justify dark:text-white">
+            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با
+            استفاده از طراحان گرافیک است.
+          </p>
+          <form>
+            <div>
+              <label for="email" class="form-label">ایمیل</label>
+              <input
+                type="email"
+                id="email"
+                placeholder="ایمیل..."
+                class="input-item"
+              />
+            </div>
+            <div>
+              <label for="message" class="form-label">متن پیام</label>
+              <textarea
+                id="message"
+                rows="8"
+                placeholder="پیام..."
+                class="input-item"
+              ></textarea>
+            </div>
+          </form>
+        </div>
+
+        <img
+          src="image/marketing-campaign-2-76.png"
+          alt="main image"
+          class="w-full sm:w-[400px] object-cover"
+        />
+      </div>
+    </section>
+
     <script src="js/index.js"></script>
   </body>
 </html>
