--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./tailwind-css.svg" type="image/x-svg" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -143,7 +144,7 @@
       <div
         class="container mx-auto py-2 px-4 md:flex md:items-center md:gap-10"
       >
-        <div>
+        <div data-aos="fade-up">
           <h2 class="text-2xl mb-5 dark:text-white">
             لورم ایپسوم <span class="text-teal-600">متن ساختگی</span>
           </h2>
@@ -158,6 +159,7 @@
         </div>
 
         <img
+          data-aos="fade-down"
           src="image/online-shopping-34.png"
           alt="main image"
           class="w-full sm:w-[400px] object-cover"
@@ -482,6 +484,99 @@
       </div>
     </section>
 
+    <div style="height: 100px; overflow: hidden">
+      <svg
+        viewBox="0 0 500 150"
+        preserveAspectRatio="none"
+        style="height: 100%; width: 100%"
+      >
+        <path
+          class="fill-gray-100 dark:fill-gray-800"
+          d="M-41.48,78.47 C202.88,239.31 349.20,-49.98 578.72,164.31 L500.00,150.00 L0.00,150.00 Z"
+          style="stroke: none"
+        ></path>
+      </svg>
+    </div>
+    <footer class="bg-gray-100 dark:bg-gray-800">
+      <div
+        class="container mx-auto py-2 px-4 md:flex md:items-center md:gap-10"
+      >
+        <div class="flex flex-col lg:flex-row items-center justify-between">
+          <div class="lg:w-1/3">
+            <h2 class="text-2xl font-bold dark:text-white mb-3">Alireza</h2>
+            <p
+              class="mb-5 leading-8 text-gray-800 text-justify dark:text-white"
+            >
+              لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با
+              استفاده از طراحان گرافیک است.
+            </p>
+            <div class="space-x-reverse space-x-2 text-center mb-6">
+              <a href="#"
+                ><i
+                  class="fa-brands fa-square-instagram text-4xl text-teal-600"
+                ></i>
+              </a>
+              <a href="#"
+                ><i
+                  class="fa-brands fa-square-facebook text-4xl text-teal-600"
+                ></i
+              ></a>
+              <a href="#"
+                ><i class="fa-brands fa-telegram text-4xl text-teal-600"></i
+              ></a>
+              <a href="#"
+                ><i class="fa-brands fa-linkedin text-4xl text-teal-600"></i
+              ></a>
+            </div>
+          </div>
+          <div
+            class="grid grid-cols-2 lg:grid-cols-4 gap-8 lg:w3/4 dark:text-white"
+          >
+            <div>
+              <h3 class="footer-heading">بخش های سایت</h3>
+              <ul class="space-y-1">
+                <li>صفحه اصلی</li>
+                <li>محصولات</li>
+                <li>درباره ما</li>
+                <li>تماس با ما</li>
+              </ul>
+            </div>
+            <div>
+              <h3 class="footer-heading">بخش های سایت</h3>
+              <ul class="space-y-1">
+                <li>صفحه اصلی</li>
+                <li>محصولات</li>
+                <li>درباره ما</li>
+                <li>تماس با ما</li>
+              </ul>
+            </div>
+            <div>
+              <h3 class="footer-heading">بخش های سایت</h3>
+              <ul class="space-y-1">
+                <li>صفحه اصلی</li>
+                <li>محصولات</li>
+                <li>درباره ما</li>
+                <li>تماس با ما</li>
+              </ul>
+            </div>
+            <div>
+              <h3 class="footer-heading">بخش های سایت</h3>
+              <ul class="space-y-1">
+                <li>صفحه اصلی</li>
+                <li>محصولات</li>
+                <li>درباره ما</li>
+                <li>تماس با ما</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+
     <script src="js/index.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
