--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
           </p>
         </div>
         <div
+          data-aos="fade-up"
           class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 mt-3 mb-3 gap-x-6 gap-y-10 lg:w-3/4 mx-auto"
         >
           <div class="flex items-center">
@@ -291,6 +292,7 @@
           class="flex flex-col items-center gap-8 lg:flex-row lg:justify-between"
         >
           <div
+            data-aos="flip-left"
             class="border-2 border-t-8 border-t-teal-600 rounded-lg py-5 px-20 text-center overflow-hidden dark:text-white"
           >
             <div class="space-y-6 py-4">
@@ -311,6 +313,7 @@
             </div>
           </div>
           <div
+            data-aos="flip-right"
             class="text-white bg-teal-600 border-2 border-t-8 border-t-teal-600 rounded-lg py-5 px-20 text-center overflow-hidden"
           >
             <div class="space-y-6 py-4">
@@ -331,6 +334,7 @@
             </div>
           </div>
           <div
+            data-aos="flip-left"
             class="border-2 border-t-8 border-t-teal-600 rounded-lg py-5 px-20 text-center overflow-hidden dark:text-white"
           >
             <div class="space-y-6 py-4">
@@ -367,11 +371,13 @@
         </div>
         <div>
           <h3
+            data-aos="fade-left"
             class="text-2xl text-center text-teal-400 dark:text-teal-200 mb-10"
           >
             گالری
           </h3>
           <div
+            data-aos="zoom-in"
             class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-x-4 gap-y-4"
           >
             <div class="overflow-hidden rounded-md">
@@ -454,7 +460,7 @@
             لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با
             استفاده از طراحان گرافیک است.
           </p>
-          <form>
+          <form data-aos="fade-left">
             <div>
               <label for="email" class="form-label">ایمیل</label>
               <input
@@ -477,6 +483,7 @@
         </div>
 
         <img
+          data-aos="fade-right"
           src="image/marketing-campaign-2-76.png"
           alt="main image"
           class="w-full sm:w-[400px] object-cover"
@@ -502,7 +509,7 @@
         class="container mx-auto py-2 px-4 md:flex md:items-center md:gap-10"
       >
         <div class="flex flex-col lg:flex-row items-center justify-between">
-          <div class="lg:w-1/3">
+          <div class="lg:w-1/3" data-aos="fade-left">
             <h2 class="text-2xl font-bold dark:text-white mb-3">Alireza</h2>
             <p
               class="mb-5 leading-8 text-gray-800 text-justify dark:text-white"
@@ -530,6 +537,7 @@
             </div>
           </div>
           <div
+            data-aos="fade-up"
             class="grid grid-cols-2 lg:grid-cols-4 gap-8 lg:w3/4 dark:text-white"
           >
             <div>
